# stepmania

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .hgeol  .hgignore  .hgtags  .install-cmake.sh  .travis-install-cmake.sh  .travis.build.sh  .travis.cmake.sh  .travis.setup.sh  .travis.update-compilers.sh  .travis.yml  ArrowEffects.cpp  CMakeLists.txt  FindDirectX.cmake  Makefile.am  PlayerOptions.cpp  README.md  StepmaniaCore.cmake  autogen.sh  configure.ac  sm-ssc.nsi  stepmania-ssc.desktop  stepmania.desktop  stepmania.nsi
src/: ActiveAttackList.cpp  ActiveAttackList.h  Actor.cpp  Actor.h  ActorFrame.cpp  ActorFrame.h  ActorFrameTexture.cpp  ActorFrameTexture.h  ActorMultiTexture.cpp  ActorMultiTexture.h  ActorMultiVertex.cpp  ActorMultiVertex.h  ActorProxy.cpp  ActorProxy.h  ActorScroller.cpp  ActorScroller.h  ActorSound.cpp  ActorSound.h  ActorUtil.cpp  ActorUtil.h  AdjustSync.cpp  AdjustSync.h  AnnouncerManager.cpp  AnnouncerManager.h  ArrowDefects.cpp  ArrowDefects.h  ArrowEffects.cpp  ArrowEffects.h  Attack.cpp  Attack.h  AttackDisplay.cpp  AttackDisplay.h  AutoActor.cpp  AutoActor.h  AutoKeysounds.cpp  AutoKeysounds.h  BGAnimation.cpp  BGAnimation.h  BGAnimationLayer.cpp  BGAnimationLayer.h  (+834 more)
src/Actors/: Actor.cpp  ActorFrame.h  ActorFrameTexture.cpp  ActorMultiTexture.cpp  ActorMultiTexture.h  ActorProxy.cpp  ActorScroller.h  ActorSound.h
src/BaseClasses/: AMVIDEO.H  activex.rcv  activex.ver  amextra.cpp  amextra.h  amfilter.cpp  amfilter.h  baseclasses.dsp  baseclasses.dsw  baseclasses.mak  cache.h  combase.cpp  combase.h  cprop.cpp  cprop.h  ctlutil.cpp  ctlutil.h  ddmm.cpp  ddmm.h  dllentry.cpp  dllsetup.cpp  dllsetup.h  dsschedule.h  fourcc.h  measure.h  msgthrd.h  mtype.cpp  mtype.h  outputq.cpp  outputq.h  pstream.cpp  pstream.h  pullpin.cpp  pullpin.h  readme.txt  refclock.cpp  refclock.h  renbase.cpp  renbase.h  schedule.cpp  (+27 more)
src/Sextets/: Data.cpp  Data.h  Packet.cpp  Packet.h  PacketBuffer.cpp  PacketBuffer.h  SextetStream.md
src/Texture Font Generator/: Texture Font Generator-net2005.sln  Texture Font Generator-net2008.sln  Texture Font Generator-net2008.vcproj  Texture Font Generator-net2010.sln  Texture Font Generator-net2010.vcxproj  Texture Font Generator-net2010.vcxproj.filters  Texture Font Generator.cpp  Texture Font Generator.h  Texture Font Generator.rc  Texture Font GeneratorDlg.cpp  Texture Font GeneratorDlg.h  TextureFont.cpp  TextureFont.h  Utils.cpp  Utils.h  resource.h  stdafx.cpp  stdafx.h
src/actors/: Actor.cpp  ActorFrame.cpp  ActorFrameTexture.cpp  ActorMultiVertex.cpp  ActorProxy.cpp  ArrowEffects.h  AutoActor.h  BGAnimation.cpp  BGAnimation.h  BPMDisplay.cpp  Background.h  Banner.h  BeginnerHelper.h  BitmapText.cpp  BitmapText.h  CombinedLifeMeterTug.cpp  ControllerStateDisplay.cpp  CourseContentsList.cpp  DancingCharacters.cpp  DancingCharacters.h  DifficultyIcon.cpp  DifficultyIcon.h  FadingBanner.h  Foreground.cpp  GradeDisplay.cpp  GrooveRadar.h  HelpDisplay.h  HoldJudgment.cpp  Inventory.cpp  LifeMeter.cpp  LifeMeterBattery.h  MemoryCardDisplay.cpp  ModIconRow.cpp  Model.cpp  Model.h  ModelManager.h  ModelTypes.h  NoteField.cpp  OptionsCursor.cpp  OptionsCursor.h  (+32 more)
src/arch/: RageDriver.cpp  RageDriver.h  arch.cpp  arch.h  arch_default.h  arch_platform.h
src/archutils/: SpecialDirs.h
src/crypto/: CryptBn.cpp  CryptBn.h  CryptMD5.cpp  CryptMD5.h  CryptNoise.cpp  CryptPrime.cpp  CryptPrime.h  CryptRSA.cpp  CryptRSA.h  CryptRand.cpp  CryptRand.h  CryptSH512.cpp  CryptSH512.h  CryptSHA.cpp  CryptSHA.h
src/docs/: Sound Drivers.txt
src/est/: EST_ChannelType.h  EST_Chunk.h  EST_Contents.h  EST_DMatrix.h  EST_FMatrix.h  EST_Featured.h  EST_Features.h  EST_Handleable.h  EST_IMatrix.h  EST_Option.h  EST_Regex.h  EST_SMatrix.h  EST_String.h  EST_THandle.h  EST_TIterator.h  EST_TIteratorI.h  EST_TKVL.h  EST_TKVLI.h  EST_TList.h  EST_TListI.h  EST_TMatrix.h  EST_TMatrixI.h  EST_TNamedEnum.h  EST_TNamedEnumI.h  EST_TSimpleMatrix.h  EST_TSimpleMatrixI.h  EST_TSimpleVector.h  EST_TSimpleVectorI.h  EST_TSortable.h  EST_TSortableI.h  EST_TVector.h  EST_TVectorI.h  EST_Token.h  EST_Track.h  EST_TrackMap.h  EST_UList.h  EST_Val.h  EST_Val_defs.h  EST_Wave.h  EST_bool.h  (+12 more)
src/ffmpeg/: 000 StepMania README.txt
src/filetypes/: XmlFile.cpp  XmlFileUtil.cpp  XmlToLua.h
src/globals/: SpecialFiles.cpp  SpecialFiles.h  StdString.h  StepMania.cpp
src/io/: P3IO.cpp  P3IO.h  PacDrive.cpp  PacDrive.h  USBDevice.cpp  USBDevice.h  USBDevice_Libusb.cpp  USBDriver.cpp  USBDriver.h
src/irc/: appveyor.cpp
src/jsoncpp/: README.txt
src/jsonxx/: LICENSE  README.txt  jsonxx.cc  jsonxx.h  jsonxx_test.cc  source.txt
src/libjpeg/: jconfig.h  jmorecfg.h  jpeg.lib  jpeglib.h
src/libtomcrypt/: .clang-format  CMakeLists.txt  LICENSE  README.md  SConscript  build.sh  check_source.sh  coverage.sh  coverage_more.sh  helper.pl  libtomcrypt-net2003.vcproj  libtomcrypt-net2005.vcproj  libtomcrypt-net2008.vcproj  libtomcrypt-net2010.vcxproj  libtomcrypt-net2010.vcxproj.filters  libtomcrypt-net2011.vcxproj  libtomcrypt-net2013.vcxproj  libtomcrypt-net2013.vcxproj.filters  libtomcrypt.pc.in  libtomcryptXbox-net2003.vcproj  libtomcrypt_VS2008.sln  libtomcrypt_VS2008.vcproj  makefile  makefile.shared  run.sh  testme.sh
src/libtommath/: CMakeLists.txt  SConscript  bn_fast_mp_invmod.c  bn_fast_mp_montgomery_reduce.c  bn_fast_s_mp_mul_digs.c  bn_fast_s_mp_sqr.c  bn_mp_2expt.c  bn_mp_abs.c  bn_mp_add_d.c  bn_mp_addmod.c  bn_mp_and.c  bn_mp_clear.c  bn_mp_clear_multi.c  bn_mp_cmp.c  bn_mp_cmp_d.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_copy.c  bn_mp_count_bits.c  bn_mp_div.c  bn_mp_div_2d.c  bn_mp_div_3.c  bn_mp_div_d.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  (+80 more)
stepmania/: .project  BUGS  COPYING.txt  ConditionalBGA Info.txt  FAQ.html  Make.CMD  Makefile.am  NEWS  PBProject.tgz  README-FIRST.TXT  README-FIRST.htm  README-FIRST.html  README-GUIDELINES  SConstruct  Stepmania.kdevelop  TODO.andy  TODO.chris  TODO.glenn  TODO.lance  TODO.miryokuteki  TODO.wolfman  Todo.Eric  autogen.sh  bend.txt  configure.ac  smpackage_for_dwi.nsi  stepmania.nsi  todo.james
(+6778 files in other folders)
